--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -1,20 +1,12 @@
 #!/bin/bash
+set -e
 
-export COMPOSER_HOME="$OPENSHIFT_DATA_DIR/.composer"
+# Build PHP extra's
+# Update conf/ini filesand install pecl extensions
+${OPENSHIFT_PHP_DIR}/bin/control build
 
-if [ ! -f "$OPENSHIFT_DATA_DIR/composer.phar" ]; then
-    curl -s https://getcomposer.org/installer | php -- --install-dir=$OPENSHIFT_DATA_DIR
-else
-    php $OPENSHIFT_DATA_DIR/composer.phar self-update
-fi
-
-( unset GIT_DIR ; cd $OPENSHIFT_REPO_DIR ; php $OPENSHIFT_DATA_DIR/composer.phar install )
-
-chmod 777 ${OPENSHIFT_REPO_DIR}storage
-chmod 777 ${OPENSHIFT_REPO_DIR}storage/app
-chmod 777 ${OPENSHIFT_REPO_DIR}storage/logs
-chmod 777 ${OPENSHIFT_REPO_DIR}storage/framework
-chmod 777 ${OPENSHIFT_REPO_DIR}storage/framework/cache
-chmod 777 ${OPENSHIFT_REPO_DIR}storage/framework/sessions
-chmod 777 ${OPENSHIFT_REPO_DIR}storage/framework/views
-chmod 777 ${OPENSHIFT_REPO_DIR}bootstrap/cache
+# Build Laravel Framework
+# Update composer executable
+source ${OPENSHIFT_REPO_DIR}/.openshift/action_hooks/build_laravel
+update_composer
+check_laravel
